# ApexBooks

./: .env.dev  .env.example  .gitignore  ARCHITECTURE.md  BUILD_FRONTEND.md  BUILD_LOG.md  Dockerfile  Makefile  NDH6SA~M  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  final.err  final2.err  nginx.conf  postman_collection.json  pyproject.toml  server.err  server3.err  server4.err
app/: main.py
app/core/: config.py  database.py  exceptions.py  middleware.py  rate_limit.py  security.py  tenant_context.py  tenant_middleware.py  totp.py
app/models/: __init__.py  accounting.py  base.py  core.py  e2e.py
app/schemas/: common.py  domain.py
app/services/: accounting_service.py  audit_service.py  csv_importer.py  duplicate_payment_service.py  store.py  (+24 more)
gst-frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts  vite.err
gst_frontend/: README.md  pubspec.yaml
migrations/: env.py
scripts/: build_frontend.sh  ci_pipeline.sh  deploy.sh  e2e_smoke.sh  generate_openapi.py  inspect_vyapar.py  manual_e2e.py  reset_password.py  seed_default_coa.py  seed_gst_rates.py  seed_settings.py  test_audit.py  test_full_validation.py  test_invariants.py  test_production_validation.py  test_settings.py  validate_postgres_compat.py  validate_project.py  validate_vyapar_gst.py  verify_all.py  vps_diagnostic.sh
tests/: test_api.py  test_e2e_flow.py  test_gst_engine.py
vyapar_extract/: ApexIntegrations__t_2026_04_15_12_30_13_viho.vyp
(+127 files in other folders)
