[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gst-api-engine"
version = "0.1.0"
description = "Production-grade multi-tenant Indian GST Accounting REST API Engine"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111", "uvicorn[standard]>=0.30", "pydantic-settings>=2.2",
  "sqlalchemy>=2.0", "psycopg[binary]>=3.1", "alembic>=1.13",
  "python-jose[cryptography]>=3.3", "passlib[bcrypt]>=1.7", "python-multipart>=0.0.9",
  "redis>=5.0", "celery>=5.3", "email-validator>=2.1", "weasyprint>=62.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]